# ghost-prebuild

./: CONTRIBUTING.md  README.md  ROADMAP.md  SOURCE_REV
.github/workflows/: ci-pr.yml  release.yml
config-examples/: multi-provider-test.toml
crates/codegen/xai-grok-auth/: Cargo.toml
crates/codegen/xai-grok-auth/src/: credential_store.rs  lib.rs  model_store.rs  models_api.rs
crates/codegen/xai-grok-auth/src/oauth/: flow.rs  mod.rs  pkce.rs
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-config-types/: Cargo.toml
crates/codegen/xai-grok-config-types/src/: health.rs  lib.rs  provider.rs
crates/codegen/xai-grok-config/src/: ghost_env.rs  lib.rs  paths.rs
crates/codegen/xai-grok-http/src/: lib.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-models/src/: lib.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager/src/: headless.rs  lib.rs  login_cmd.rs  models.rs  providers.rs
crates/codegen/xai-grok-pager/src/app/: app_view.rs  cli.rs  event_loop.rs
crates/codegen/xai-grok-shell/src/agent/: config.rs  mod.rs  model_refresh.rs  models.rs
crates/codegen/xai-grok-shell/src/agent/mvp_agent/: agent_ops.rs  mod.rs  subagent_coordinator.rs
crates/codegen/xai-grok-shell/src/test_support/: lsp_runtime.rs
crates/codegen/xai-grok-shell/src/util/: grok_auth_credentials.rs
crates/codegen/xai-grok-tools/src/util/: grok_home.rs  mod.rs
crates/codegen/xai-grok-version/src/: lib.rs
scripts/: rename-crates.sh
(+3 files in other folders)
